:Security: Adicionando a metodo para baixar os datasets por meio da api do kaggle

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-#Ignorar a pasta python
 SpaceshipTitanic/python/SpaceshipTitanic/
 SpaceshipTitanic/Data/test.csv
 SpaceshipTitanic/Data/train.csv
+SpaceshipTitanic/Data/sample_submission.csv
+kaggle.json
